@@ -62,6 +62,8 @@ Tests
 Tools/Demos
 -----------
 
+- Issue #10710: ``Misc/setuid-prog.c`` is removed from the source tree.
+
 - Issue #10706: Remove outdated script runtests.sh.  Either ``make test``
   or ``python -m test`` should be used instead.
 
